added timer function to javascript

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
             <div class = "correct-answer"></div>
             <div class = "image-holder"></div>
             <div class = "times-up"></div>
-            <div class = "results"></div>
+            <p class = "wins"></p>
+            <p class = "losses"></p>
+            <p class = "time-up"></p>
+            <p class = "start-over"></p>
         
         </div>
 
