added stopTimer function and also added coding to show times up

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class = "times-up"></div>
             <p class = "wins"></p>
             <p class = "losses"></p>
-            <p class = "time-up"></p>
+            <p class = "no-answer"></p>
             <p class = "start-over"></p>
         
         </div>
