added function so that if Play Again is clicked it resets and restarts the game

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p class = "wins"></p>
             <p class = "losses"></p>
             <p class = "no-answer"></p>
-            <p class = "start-over"></p>
+            <h3 class = "start-over"></h3>
         
         </div>
 
