started css styling

--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trivia Game</title>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet">
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Google Fonts -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet"> -->
+    <!-- jquery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 </head>
 <body>
     <div class = container>
-        <h1>80's Movie Trivia</h1>
+        <h1>80's <span style= "color: blue; text-shadow: 0 0 25px blue">Movie Trivia</span></h1>
 
         <h2 class = "timer"></h2>
         <div class = "start"></div> 
@@ -28,7 +34,6 @@
             <p class = "losses"></p>
             <p class = "no-answer"></p>
             <h3 class = "start-over"></h3>
-        
         </div>
 
 
