added styling for fonts

--- a/index.html
+++ b/index.html
@@ -8,34 +8,38 @@
     <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <!-- Google Fonts -->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet"> -->
     <!-- jquery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 </head>
 <body>
     <div class = container>
-        <h1>80's <span style= "color: blue; text-shadow: 0 0 25px blue">Movie Trivia</span></h1>
+        <h1>80's <span style= "color: blue; text-shadow: 0 0 25px blue">MOVIE TRIVIA</span></h1><br>
 
         <h2 class = "timer"></h2>
         <div class = "start"></div> 
-        <div class = "questions-answers">
-            <h2 class = "question"></h2>
-            <h3 class = "answerOne answer" value = "1"></h3>
-            <h3 class = "answerTwo answer" value = "2"></h3>
-            <h3 class = "answerThree answer" value = "3"></h3>
-            <h3 class = "answerFour answer" value = "4"></h3>
-            <div class = "answer-message"></div>
-            <div class = "correct-answer"></div>
-            <div class = "image-holder"></div>
-            <div class = "times-up"></div>
-            <p class = "wins"></p>
-            <p class = "losses"></p>
-            <p class = "no-answer"></p>
-            <h3 class = "start-over"></h3>
+            <div class = "questions-answers">
+                <h2 class = "question"></h2>
+                <h3 class = "answerOne answer" value = "1"></h3>
+                <h3 class = "answerTwo answer" value = "2"></h3>
+                <h3 class = "answerThree answer" value = "3"></h3>
+                <h3 class = "answerFour answer" value = "4"></h3>
+            </div>
+            <div class = "show-answer">
+                <div class = "answer-message"></div>
+                <div class = "correct-answer"></div>
+                <div class = "image-holder"></div>
+                <div class = "times-up"></div>
+            </div>
+            <div class = "final-show">
+                <p class = "gameover"></p>
+                <p class = "final-message"></p>
+                <p class = "wins"></p>
+                <p class = "losses"></p>
+                <p class = "no-answer"></p>
+                <h3 class = "start-over"></h3>
+            </div>
         </div>
-
 
     </div>
     <script src="assets/javascript/app.js"></script>
