added 8 more movies and questions

--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
 </head>
 <body>
     <div class = container>
+        <!-- Title -->
         <h1>80's <span style= "color: blue; text-shadow: 0 0 25px blue">MOVIE TRIVIA</span></h1><br>
 
+        <!-- Holds the timer -->
         <h2 class = "timer"></h2>
-        <div class = "start"></div> 
+        <!-- Holds the start button -->
+        <div class = "start"></div>
+         <!--div for Questions and Answers  -->
             <div class = "questions-answers">
                 <h2 class = "question"></h2>
                 <h3 class = "answerOne answer" value = "1"></h3>
@@ -25,12 +29,14 @@
                 <h3 class = "answerThree answer" value = "3"></h3>
                 <h3 class = "answerFour answer" value = "4"></h3>
             </div>
+            <!-- div that shows correct answer and image -->
             <div class = "show-answer">
                 <div class = "answer-message"></div>
                 <div class = "correct-answer"></div>
                 <div class = "image-holder"></div>
                 <div class = "times-up"></div>
             </div>
+            <!-- div that shows the final results -->
             <div class = "final-show">
                 <p class = "gameover"></p>
                 <p class = "final-message"></p>
@@ -39,7 +45,7 @@
                 <p class = "no-answer"></p>
                 <h3 class = "start-over"></h3>
             </div>
-        </div>
+        
 
     </div>
     <script src="assets/javascript/app.js"></script>
